Bug 464863 - Padding gets reset when layout is loaded
Summary: Padding gets reset when layout is loaded
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: Custom Tiling (other bugs)
Version First Reported In: 5.26.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-26 18:33 UTC by Bacteria
Modified: 2023-02-03 16:41 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bacteria 2023-01-26 18:33:32 UTC
SUMMARY
Padding gets reset when layout is loaded. Even though the Padding field on the top right shows the value that I have set it to.


STEPS TO REPRODUCE
1. Set padding to anything custom (15 in my case)
2. Tile a window, window should tile with the padding set
3. Load a layout from the "Load Layout.." menu
4. Note that the padding value on the top right is still the one that you have set i.e, 15
5. Tile a window

OBSERVED RESULT
Window uses the default layout padding

EXPECTED RESULT
Window should either use the padding set by user or the 'Padding' field should reset to default when a layout is loaded.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 6.1.7-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Iyán M. V. 2023-01-26 20:54:52 UTC
I was going to open a bug about this but I found this that is pretty close. In my case, I would like the padding value to be saved. Every time I reboot the computer it goes back to its default value.
Comment 2 David Edmundson 2023-02-01 16:54:55 UTC
We can confirm changing just the padding does not sync to disk immediately, whereas changing any tiles does cause that.
Comment 3 Bug Janitor Service 2023-02-02 13:00:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3530
Comment 4 Bug Janitor Service 2023-02-03 13:06:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3534
Comment 5 Vlad Zahorodnii 2023-02-03 16:40:48 UTC
Git commit d619e0b4d5314976eed8fa9b2a6fda27b049ed42 by Vlad Zahorodnii.
Committed on 03/02/2023 at 16:40.
Pushed by vladz into branch 'master'.

tiling: Ensure padding is writen to config

Root tile's padding is not monitored so new padding values are never written to the config.

M  +1    -0    src/tiles/tilemanager.cpp

https://invent.kde.org/plasma/kwin/commit/d619e0b4d5314976eed8fa9b2a6fda27b049ed42
Comment 6 Vlad Zahorodnii 2023-02-03 16:41:25 UTC
Git commit 8e74128f634eef2f8cec87d01f575cb57c15306e by Vlad Zahorodnii.
Committed on 03/02/2023 at 16:41.
Pushed by vladz into branch 'cherry-pick-d619e0b4'.

tiling: Ensure padding is writen to config

Root tile's padding is not monitored so new padding values are never written to the config.


(cherry picked from commit d619e0b4d5314976eed8fa9b2a6fda27b049ed42)

M  +1    -0    src/tiles/tilemanager.cpp

https://invent.kde.org/plasma/kwin/commit/8e74128f634eef2f8cec87d01f575cb57c15306e