Tiles: Fix saving of padding changes

Custom Tiles have a signal used to broadcast if it needs saving. This is
connected to geometry changes, but padding is not included.

End user bug is changing padding alone doesn't get saved.

This patch emits the change signal if the padding changes. The signal is
renamed to be more generic.

BUG: 464863